# format-docstring

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  muff.toml  pyproject.toml  tox.ini
docstring_formatter/: __init__.py  config.py  docstring_rewriter.py  line_wrap_numpy.py  line_wrap_utils.py  main_jupyter.py  main_py.py
format_docstring/: base_fixer.py  config.py  docstring_rewriter.py  line_wrap_google.py  line_wrap_numpy.py  line_wrap_utils.py  main_jupyter.py  main_py.py
tests/: helpers.py  test_base_fixer.py  test_config.py  test_docstring_rewriter.py  test_line_wrap_google.py  test_line_wrap_numpy.py  test_line_wrap_utils.py  test_main_jupyter.py  test_main_py.py  test_playground.py
tests/test_data/: playground.py
tests/test_data/end_to_end/google/: README.md  arg_name_is_default.txt  colon_spacing_fix.txt  contents_that_are_not_wrapped.txt  default_value_standardization.txt  empty_lines_are_respected.txt  examples_section.txt  existing_linebreaks_should_not_be_respected.txt  fix_rst_backticks.txt  param_signature_without_type.txt  parameters_returns_raises_wrapping.txt  rST_cross_reference.txt  returns_signature_and_description.txt  section_headings_with_colons.txt  section_title_fixed.txt  sections_notes_examples.txt  signature_dont_sync_raises.txt  signature_line_is_not_wrapped.txt  signature_sync_class_docstrings.txt  signature_sync_parameters.txt  signature_sync_returns.txt  signature_sync_yields.txt  texts_are_rewrapped.txt  variadic_signature_without_colon.txt  very_long_unbreakable_word.txt
tests/test_data/end_to_end/numpy/: contents_that_are_not_wrapped.txt  fix_rst_backticks.txt  new_lines_before_and_after.txt  signature_sync_class_docstrings.txt  signature_sync_yields.txt
tests/test_data/line_wrap/google/: README.md  colon_spacing_fix.txt  examples_section.txt  (+23 more)
(+3 files in other folders)
